syntax = "proto3";

package loader;

option go_package = "github.com/accretional/runrpc/loader";

message BytesValue {
    bytes data = 1;
}

// Loader service handles loading of binaries
service Loader {
    // Exec implements execve(const char *pathname, char *const argv[], char *const envp[]):
    rpc Exec(ExecutionArgs) returns (ExitCode);
    // Link is like ~dlopen but in a way that allows for deferred Loading
    rpc Link(stream BytesValue) returns (LoadHandle);
    // Load implements fexecve
    rpc Load(LoadArgs) returns (ExitCode);
}

message ExecutionArgs {
    string path = 1;
    repeated string args = 2;
    map<string, string> env = 3;
}

message LoadArgs {
    int32 fd = 1;
    repeated string args = 2;
    map<string, string> env = 3;
}

message ExitCode {
    int32 code = 1;
}

message LoadHandle {
    int32 fd = 1;
}